# web-srpg

./: .gitignore  ART_GUIDE.md  ART_PROMPTS_ALLIED_COMMANDERS.md  ART_PROMPTS_BATTLE_SPRITES.md  ART_PROMPTS_BGM.md  ART_PROMPTS_CH12_AND_NEW_HERO.md  ART_PROMPTS_CH13.md  ART_PROMPTS_CH14.md  ART_PROMPTS_CH4_5_7_9_11_CG.md  ART_PROMPTS_CHAPTER1_CG.md  ART_PROMPTS_MAIN_BOSS_SPRITES.md  ART_PROMPTS_NANO_BANANA.md  ART_PROMPTS_PLAYER_GENERIC_SPRITES.md  ART_PROMPTS_REMAINING_CG.md  ART_PROMPTS_SECONDARY_BOSSES.md  ART_PROMPTS_SECONDARY_BOSS_SPRITES.md  ART_PROMPTS_SFX.md  ART_PROMPTS_TILES.md  ART_PROMPTS_TITLE_CG.md  COMMERCIALIZATION.md  CONTEXT.md  DESIGN.md  LEARNING_ROADMAP.md  LICENSE  README.md  ROADMAP.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: deploy.yml
public/: manifest.json
public/assets/audio/: sfx_arrow.m4a  sfx_defeat.m4a  sfx_hit.m4a  sfx_lance.m4a  sfx_level_up.m4a  sfx_magic.m4a  sfx_sword.m4a  (+2 more)
scripts/: balance-sim.ts  optimize-assets.mjs
src/: BattleScene.ts  Grid.ts  Unit.ts  main.ts  types.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src/battle/: CounterSystem.ts  DamageCalculator.ts  Leveling.ts
src/data/: achievements.ts  assetManifest.ts  balance.ts  battleSave.ts  bonds.ts  chapters.ts  commanders.ts  cutscenes.ts  equipment.ts  save.ts  scenarios.ts  skillEffects.ts  terrainTypes.ts  unitTypes.ts
src/scenes/: BootScene.ts  CutsceneScene.ts  HubScene.ts  TitleScene.ts
src/utils/: achievementToast.ts  audio.ts  hexDrawing.ts  i18n.ts  settings.ts  uiHit.ts
